--- a/intro.css
+++ b/intro.css
@@ -151,6 +151,9 @@
 
 .project-box{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: skyblue;
 }
 .frame{
@@ -169,7 +172,8 @@
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    height: 80vh;;
+    height: 80vh;
+    width: 80vw;
 }
 
 .frame > img {
